# GPU-Path-Traced-Cinematic-Urban-Destruction

./: .gitignore  CMakeLists.txt  README.md  finalProject
Shaders/: basic.frag  basic.vert  composite_ao.frag  fog_godrays.frag  fullscreen.vert  geom_demo.frag  geom_demo.vert  particles.comp  particles.frag  particles.vert  particles_sand.frag  particles_sand.vert  resolve_accum.frag  rt_ao.comp  rt_pathtrace.comp  rt_pt.comp  shadow_depth.vert  skybox.frag  skybox.vert  textured.frag  textured.vert
assets/: building_02.glb  building_04.glb
src/: Camera.cpp  Camera.h  CityBuilder.cpp  CityBuilder.h  GeometryDemo.cpp  GeometryDemo.h  Instancing.cpp  Instancing.h  Mesh.cpp  Mesh.h  Particles.cpp  Particles.h  PhysicsWorld.cpp  PhysicsWorld.h  PostProcess.cpp  PostProcess.h  Raytrace.cpp  Raytrace.h  Shader.cpp  Shader.h  ShadowMap.cpp  ShadowMap.h  Skybox.cpp  Skybox.h  Spline.cpp  Spline.h  Texture2D.cpp  Texture2D.h  Timeline.h  gl_utils.cpp  gl_utils.h  main.cpp
src/gltf/: GltfModel.cpp  GltfModel.h
